# learnrust-substrate

./: .gitignore  README.md
l3/: Cargo.toml
l3/src/: main.rs
l4/: Cargo.toml
l4/src/: main.rs
l4/src/uutils/: graph.rs  mod.rs  tools.rs  traffic_light.rs
l5/: .gitignore  Cargo.toml
l5/pallets/poe/: Cargo.toml
l5/pallets/poe/src/: lib.rs  mock.rs  tests.rs
l5/runtime/: Cargo.toml
l5/runtime/src/: lib.rs
l6/: README.md  main.ts  package.json
la1/: Cargo.toml
la1/pallets/kittiesx/: Cargo.toml
la1/pallets/kittiesx/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  tests2.rs  weights.rs
la1/pallets/kittiesx/src/migrations/: v1.rs  v2.rs
la1/pallets/poex/: Cargo.toml
la1/pallets/poex/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
la1/runtime/: Cargo.toml
la1/runtime/src/: lib.rs
la4/: .gitignore  Cargo.toml
la4/node/: Cargo.toml
la4/node/src/: service.rs
la4/pallets/ocwx/: Cargo.toml
la4/pallets/ocwx/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
la4/runtime/: Cargo.toml
la4/runtime/src/: lib.rs
la5/: rust-toolchain.toml
la5/erc20/: Cargo.toml  lib.rs
