[package]
description = "ocwx"
edition = "2021"
license = "Unlicense"
name = "pallet-ocwx"
publish = false
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
  "derive",
]}
frame-benchmarking = {version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"}
frame-support = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"}
frame-system = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"}
lite-json = {version = "0.2.0", default-features = false}
log = {version = "0.4.20", default-features = false}
scale-info = {version = "2.5.0", default-features = false, features = ["derive"]}
serde = {version = '1.0.195', default-features = false, features = ['derive']}
serde_json = {version = '1.0.111', default-features = false, features = ['alloc']}
sp-core = {version = "21.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"}
sp-io = {version = "23.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"}
sp-runtime = {version = "24.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"}
sp-std = {version = "8.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"}

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
  "codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
]
try-runtime = ["frame-support/try-runtime"]
